# code-parsing-sruthy-task

./: .gitignore  .safety-policy.yml  6.0.0  CHANGELOG.md  DOCUMENTATION_SUMMARY.md  LICENSE  README.md  analyze_oop.py  application.example.yml  application.yml  check_code_quality.py  check_modularity.py  check_real_score.py  debug_combined_summary.txt  extract_tables.py  fitz.pyi  fix_compliance.py  generate_metadata.py  grade_project.py  main.py  mypy.ini  profile_performance.py  pyproject.toml  requirements.txt  score_oop.py  search.py  search_cli.py  temp_files.txt
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  COMPONENT_FLOW.md  EXTRACTION_QUALITY_REPORT.md  USAGE.md  dataflow.md  logging.md
outputs/: 20_extracted_tables.txt  USB PD Specification_table.jsonl  extracted_figures.jsonl  extracted_tables.json  figures_summary.json  parsing_report.json  table_summary.txt  usb_pd_metadata.jsonl  usb_pd_toc.jsonl  validation_report.xlsx
src/: __init__.py
src/cli/: __init__.py  app.py  decorators.py  run_extraction.py  run_table_extraction.py  strategies.py
src/config/: __init__.py  base_config.py  config.py  constants.py
src/core/: __init__.py  benchmark.py  models.py
src/core/analyzer/: __init__.py  base_analyzer.py  content_analyzer.py
src/core/builders/: __init__.py  toc_builder.py
src/core/config/: __init__.py  base_config.py  config_loader.py  constants.py  models.py
src/core/extractors/: __init__.py  pdf_extractor.py  toc_extractor.py
src/core/extractors/pdfextractor/: __init__.py  base_extractor.py  content_processor.py  extraction_engine.py  pdf_extractor.py  pdf_reader.py
src/core/extractors/strategies/: __init__.py  extraction_strategy.py
src/core/extractors/tocextractor/: __init__.py  base_extractor.py  toc_extractor.py
src/core/interfaces/: __init__.py  base_manager.py  base_strategy.py  extraction_strategy.py  factory_interface.py  parser_interface.py  pipeline_interface.py  report_interface.py
src/core/orchestrator/: __init__.py  base_pipeline.py  data_extractor.py  file_manager.py  interfaces.py  pipeline_coordinator.py  pipeline_orchestrator.py  report_manager.py
src/core/processors/: __init__.py  base_processor.py
src/extractors/: __init__.py  content_extractor.py  extractor_interface.py  image_extractor.py  table_extractor.py  table_summary.py  text_extractor.py
src/interfaces/: __init__.py  app.py
src/loggers/: __init__.py  base_logger.py  logger.py
src/orchestrator/: __init__.py  pipeline_orchestrator.py  table_extraction_pipeline.py  validator.py
src/parser/: __init__.py  base_parser.py  parser_factory.py  pdf_parser.py  text_parser.py  toc_extractor.py
src/search/: __init__.py  jsonl_searcher.py
src/support/: __init__.py  base_report_generator.py  excel_report_generator.py  json_report_generator.py  metadata_generator.py  output_writer.py  validation_generator.py
src/support/factories/: __init__.py  file_factory.py
src/support/report/: __init__.py  excel_report.py  jsonreport_generator.py  report_generator.py
src/support/search/: __init__.py  base_search.py  jsonl_search.py  search_app.py  search_display.py
src/support/writers/: __init__.py  base_writer.py  csv_writer.py  jsonl_writer.py
src/utils/: __init__.py  base.py  decorators.py  extractor.py  interfaces.py  logger.py  protocols.py  security_utils.py  timer.py
src/writers/: __init__.py  jsonl_writer.py  table_writer.py  writer_interface.py
tests/: README.md  __init__.py  conftest.py  test_comprehensive.py  test_coverage_boost.py  test_edge_cases.py  test_extractor.py  test_minimal.py  test_oop_minimal.py  test_parser.py  test_performance.py  test_table_extraction.py  test_table_extractor.py  test_validation.py
tests/common/: __init__.py  base_fixture.py  base_suite.py  base_test.py  mixins.py  strategies.py
tests/coverage_tests/: __init__.py  test_coverage_boost.py  test_imports.py
tests/fixtures/: __init__.py  conftest.py  small_test.py
tests/functional_tests/: __init__.py  test_comprehensive.py  test_edge_cases.py  test_extractor.py  test_parser.py  test_table_extraction.py  test_validation.py
tests/helpers/: __init__.py  file_utils.py  mock_data.py  performance_utils.py  validation_utils.py
tests/oop_tests/: __init__.py  test_composition.py  test_inheritance.py  test_interfaces.py  test_oop_minimal.py  test_strategy_pattern.py
tests/performance_tests/: __init__.py  test_performance.py  test_scalability.py
tests/regression_tests/: __init__.py  test_regression_basic.py
